added get progress by category
