# src/gen/become_better/main.pb.gw.go
@@ -181,6 +181,38 @@ func local_request_BecomeBetter_GetProgress_0(ctx context.Context, marshaler run
 	return msg, metadata, err
 }
 
+var filter_BecomeBetter_GetProgressByCategory_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_BecomeBetter_GetProgressByCategory_0(ctx context.Context, marshaler runtime.Marshaler, client BecomeBetterClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ProgressByCategoryRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_BecomeBetter_GetProgressByCategory_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.GetProgressByCategory(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_BecomeBetter_GetProgressByCategory_0(ctx context.Context, marshaler runtime.Marshaler, server BecomeBetterServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ProgressByCategoryRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_BecomeBetter_GetProgressByCategory_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.GetProgressByCategory(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterBecomeBetterHandlerServer registers the http handlers for service BecomeBetter to "mux".
 // UnaryRPC     :call BecomeBetterServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -286,6 +318,26 @@ func RegisterBecomeBetterHandlerServer(ctx context.Context, mux *runtime.ServeMu
 			return
 		}
 		forward_BecomeBetter_GetProgress_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodGet, pattern_BecomeBetter_GetProgressByCategory_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/example.BecomeBetter/GetProgressByCategory", runtime.WithHTTPPathPattern("/v1/progress/by_category"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_BecomeBetter_GetProgressByCategory_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BecomeBetter_GetProgressByCategory_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -412,21 +464,40 @@ func RegisterBecomeBetterHandlerClient(ctx context.Context, mux *runtime.ServeMu
 		}
 		forward_BecomeBetter_GetProgress_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_BecomeBetter_GetProgressByCategory_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/example.BecomeBetter/GetProgressByCategory", runtime.WithHTTPPathPattern("/v1/progress/by_category"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_BecomeBetter_GetProgressByCategory_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BecomeBetter_GetProgressByCategory_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_BecomeBetter_MainCategories_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "main_categories"}, ""))
-	pattern_BecomeBetter_AddCategories_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "main_categories"}, ""))
-	pattern_BecomeBetter_FillProgress_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"progress"}, ""))
-	pattern_BecomeBetter_DeleteProgress_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "progress"}, ""))
-	pattern_BecomeBetter_GetProgress_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "progress"}, ""))
+	pattern_BecomeBetter_MainCategories_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "main_categories"}, ""))
+	pattern_BecomeBetter_AddCategories_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "main_categories"}, ""))
+	pattern_BecomeBetter_FillProgress_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"progress"}, ""))
+	pattern_BecomeBetter_DeleteProgress_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "progress"}, ""))
+	pattern_BecomeBetter_GetProgress_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "progress"}, ""))
+	pattern_BecomeBetter_GetProgressByCategory_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "progress", "by_category"}, ""))
 )
 
 var (
-	forward_BecomeBetter_MainCategories_0 = runtime.ForwardResponseMessage
-	forward_BecomeBetter_AddCategories_0  = runtime.ForwardResponseMessage
-	forward_BecomeBetter_FillProgress_0   = runtime.ForwardResponseMessage
-	forward_BecomeBetter_DeleteProgress_0 = runtime.ForwardResponseMessage
-	forward_BecomeBetter_GetProgress_0    = runtime.ForwardResponseMessage
+	forward_BecomeBetter_MainCategories_0        = runtime.ForwardResponseMessage
+	forward_BecomeBetter_AddCategories_0         = runtime.ForwardResponseMessage
+	forward_BecomeBetter_FillProgress_0          = runtime.ForwardResponseMessage
+	forward_BecomeBetter_DeleteProgress_0        = runtime.ForwardResponseMessage
+	forward_BecomeBetter_GetProgress_0           = runtime.ForwardResponseMessage
+	forward_BecomeBetter_GetProgressByCategory_0 = runtime.ForwardResponseMessage
 )
